Source/WebCore/loader/archive/mhtml/MHTMLParser.h
@@ -34,6 +34,7 @@
 #if ENABLE(MHTML)
 #include "SharedBufferChunkReader.h"
 #include <wtf/RefPtr.h>
+#include <wtf/text/WTFString.h>
 #include <wtf/Vector.h>
 
 namespace WebCore {
