Source/WebCore/platform/SharedBufferChunkReader.cpp
@@ -32,11 +32,10 @@
 #include "SharedBufferChunkReader.h"
 
 #include "SharedBuffer.h"
-#include <wtf/text/StringBuilder.h>
 
 namespace WebCore {
 
-SharedBufferChunkReader::SharedBufferChunkReader(SharedBuffer* buffer, const String& separator)
+SharedBufferChunkReader::SharedBufferChunkReader(SharedBuffer* buffer, const Vector<char>& separator)
     : m_buffer(buffer)
     , m_bufferPosition(0)
     , m_segment(0)
@@ -48,34 +47,53 @@ SharedBufferChunkReader::SharedBufferChunkReader(SharedBuffer* buffer, const Str
 {
 }
 
-void SharedBufferChunkReader::setSeparator(const String& separator)
+SharedBufferChunkReader::SharedBufferChunkReader(SharedBuffer* buffer, const char* separator)
+    : m_buffer(buffer)
+    , m_bufferPosition(0)
+    , m_segment(0)
+    , m_segmentLength(0)
+    , m_segmentIndex(0)
+    , m_reachedEndOfFile(false)
+    , m_separatorIndex(0)
+{
+    setSeparator(separator);
+}
+
+void SharedBufferChunkReader::setSeparator(const Vector<char>& separator)
 {
     m_separator = separator;
 }
 
-String SharedBufferChunkReader::nextChunk(bool includeSeparator)
+void SharedBufferChunkReader::setSeparator(const char* separator)
+{
+    m_separator.clear();
+    m_separator.append(separator, strlen(separator));
+}
+
+bool SharedBufferChunkReader::nextChunk(Vector<char>& chunk, bool includeSeparator)
 {
     if (m_reachedEndOfFile)
-        return String();
+        return false;
 
-    StringBuilder stringBuilder;
+    chunk.clear();
     while (true) {
         while (m_segmentIndex < m_segmentLength) {
             char currentCharacter = m_segment[m_segmentIndex++];
             if (currentCharacter != m_separator[m_separatorIndex]) {
-              if (m_separatorIndex > 0) {
-                stringBuilder.append(m_separator.substring(0, m_separatorIndex));
-                m_separatorIndex = 0;
-              }
-              stringBuilder.append(currentCharacter);
-              continue;
+                if (m_separatorIndex > 0) {
+                    ASSERT(m_separatorIndex <= m_separator.size());
+                    chunk.append(m_separator.data(), m_separatorIndex);
+                    m_separatorIndex = 0;
+                }
+                chunk.append(currentCharacter);
+                continue;
             }
             m_separatorIndex++;
-            if (m_separatorIndex == m_separator.length()) {
-              if (includeSeparator)
-                stringBuilder.append(m_separator);
-              m_separatorIndex = 0;
-              return stringBuilder.toString();
+            if (m_separatorIndex == m_separator.size()) {
+                if (includeSeparator)
+                    chunk.append(m_separator);
+                m_separatorIndex = 0;
+                return true;
             }
         }
 
@@ -86,11 +104,47 @@ String SharedBufferChunkReader::nextChunk(bool includeSeparator)
         if (!m_segmentLength) {
             m_reachedEndOfFile = true;
             if (m_separatorIndex > 0)
-              stringBuilder.append(m_separator.substring(0, m_separatorIndex));
-            return stringBuilder.length() > 0 ? stringBuilder.toString() : String();
+                chunk.append(m_separator.data(), m_separatorIndex);
+            return !chunk.isEmpty();
         }
     }
-    return String(); // Compiler is unhappy without this.
+    ASSERT_NOT_REACHED();
+    return false;
+}
+
+String SharedBufferChunkReader::nextChunkAsUTF8StringWithLatin1Fallback(bool includeSeparator)
+{
+    Vector<char> data;
+    if (!nextChunk(data, includeSeparator))
+        return String();
+
+    return data.size() ? String::fromUTF8WithLatin1Fallback(data.data(), data.size()) : String("");
+}
+
+size_t SharedBufferChunkReader::peek(Vector<char>& data, size_t requestedSize)
+{
+    data.clear();
+    if (requestedSize <= m_segmentLength - m_segmentIndex) {
+        data.append(m_segment + m_segmentIndex, requestedSize);
+        return requestedSize;
+    }
+
+    size_t readBytesCount = m_segmentLength - m_segmentIndex;
+    data.append(m_segment + m_segmentIndex, readBytesCount);
+
+    size_t bufferPosition = m_bufferPosition + m_segmentLength;
+    const char* segment = 0;
+    while (size_t segmentLength = m_buffer->getSomeData(segment, bufferPosition)) {
+        if (requestedSize <= readBytesCount + segmentLength) {
+            data.append(segment, requestedSize - readBytesCount);
+            readBytesCount += (requestedSize - readBytesCount);
+            break;
+        }
+        data.append(segment, segmentLength);
+        readBytesCount += segmentLength;
+        bufferPosition += segmentLength;
+    }
+    return readBytesCount;
 }
 
 }
